# muzeomat-projekt

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  start-all.sh  stop-all.sh
cpp-engine/: CMakeLists.txt  Dockerfile  build.sh
cpp-engine/include/: graph.hpp  jni_interface.hpp  tsp_solver.hpp
cpp-engine/src/: graph.cpp  jni_interface.cpp  tsp_solver.cpp
cpp-engine/src/main/java/hr/muzej/: MuzejAplikacija.java
cpp-engine/src/main/java/hr/muzej/entiteti/: Ruta.java
docker/: Dockerfile.nginx  docker-compose.yml  init-db.sql  nginx.conf
dokumentacija/specifikacija/: Muzeomat OBLIKOVANJE.docx  Muzeomat SPECIFIKACIJA.docx
java-server/: Dockerfile  pom.xml
java-server/src/main/: Dockerfile
java-server/src/main/resources/: application.properties
java-server/src/main/resources/static/css/: admin.css
java-server/src/main/resources/templates/: admin-dashboard.html  admin-login.html  prostorija-form.html
javafx-client/: build.sh  pom.xml  run.sh
javafx-client/src/main/resources/css/: stil.css
javafx-client/src/main/resources/fxml/: dobrodosli.fxml  odabir.fxml
python-admin/: .gitignore  Dockerfile  api_client.py  requirements.txt  run.py  seed_demo_data.py
python-admin/static/css/: style.css
python-admin/templates/: rooms.html
python-wrapper/: README.md  app.py  config.py  forms.py  init_db.py  models.py  routes.py  test_tsp.sh  tsp_wrapper.py
python-wrapper/static/js/: main.js
python-wrapper/templates/: dashboard.html  layout.html  login.html  room_form.html  statistics.html
(+26 files in other folders)
